Dark mode fixes

--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -48,6 +48,10 @@
   user-select: none;
 }
 
+.navigation {
+  padding-left: 8px !important;
+}
+
 .navigation::after, .search::after {
   display: none;
 }
